Update and rename index-0.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,13 +6,9 @@
 
   <title>The HTML5 Herald</title>
 
-  <script>
-    var students = ['du', 'de', 'iw'];
-    console.log(students);
-  </script>
 </head>
 
 <body>
-  <h1>hoy</h1>
+  <a href="./week-1/index.html">week 1</a> <br>
 </body>
 </html>
