--- a/week-1/index.html
+++ b/week-1/index.html
@@ -23,7 +23,8 @@
   <p>
     here's a little project we're working on.  it'll get bigger as we move on
   </p>
-  <button onclick="p
+  <button onclick="print_deets(project)">print project info</button> <br>
+  <hr>
   <a href="./team.html">team</a> <br>
   <a href="./calc.html">calc</a> <br>
 </body>
