--- a/week-1/team.html
+++ b/week-1/team.html
@@ -33,7 +33,7 @@
   </p>
   <button onclick="print_team_name(team_name)">team name</button> <br>
   <button onclick="print_team_members(team_members)">team members</button> <br>
-  <button onclick="introduce(team_name, team_members)">full intro<button> <br>
+  <button onclick="introduce(team_name, team_members)">full intro</button> <br>
   <hr> 
   <a href="./index.html">home</a> <br>
 </body>
