--- a/week-1/index.html
+++ b/week-1/index.html
@@ -4,28 +4,18 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>home page</title>
 
-  <script>
-    var project = {
-        name: "deeemo",
-        link: "https://www.badgerbadgerbadger.com",
-        description: "we made this. internet fame!"
-      };
-    function print_deets(obj) {
-      console.log(obj);
-    }
+  <script type="text/javascript">
+    // data (variables)
+
+    // functions
+
   </script>
 </head>
 
 <body>
-  <h1>team project!</h1>
-  <p>
-    here's a little project we're working on.  it'll get bigger as we move on
-  </p>
-  <button onclick="print_deets(project)">print project info</button> <br>
-  <hr>
-  <a href="./team.html">team</a> <br>
-  <a href="./calc.html">calc</a> <br>
+  <!-- delete this button when you're ready to start! -->
+  <a href="./example-to-study.html">example to study</a>
 </body>
 </html>
