--- a/week-2/index.html
+++ b/week-2/index.html
@@ -1,1 +1,18 @@
-paste in your finished html file from last week and add the new user stories
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>home page</title>
+
+  <script type="text/javascript" src="./index.js"></script>
+
+  </script>
+</head>
+
+<body>
+  <!-- delete this button when you're ready to start! -->
+  <a href="./example-to-study/index.html">example to study</a>
+</body>
+</html>
