--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>cross-module 1</title>
 
 </head>
 
 <body>
   <a href="./week-1/index.html">week 1</a> <br>
+  <a href="./week-2/index.html">week 2</a> <br>
+  <a href="./week-3/index.html">week 3</a> <br>
 </body>
 </html>
