--- a/week-1/calc.html
+++ b/week-1/calc.html
@@ -4,24 +4,18 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>calc</title>
 
-  <script>
-     var numbers = [3,4,5,6,7];
-     
-     function print_numbers(arr) {
-      console.log(arr);
-     };
+  <script type="text/javascript">
+    // data (variables)
+
+    // functions
+
   </script>
 </head>
 
 <body>
-  <h1>calc</h1>
-  <p>
-    a little calculator-in-progress
-  </p>
-  <button onclick="print_numbers(numbers)">print array of numbers</button> <br>
-  <hr>
-  <a href="./index.html">home</a> <br>
+
+
 </body>
 </html>
