--- a/week-1/index.html
+++ b/week-1/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <h1>week 1 index.html</a>
   <!-- delete this button when you're ready to start! -->
   <a href="./example-to-study.html">example to study</a>
 </body>
