--- a/week-2/example-to-study/index.html
+++ b/week-2/example-to-study/index.html
@@ -14,8 +14,8 @@
   <p>
     a little demo to figure out
   </p>
-  <button onclick="print_thing(a);">call print_a_thing with "a"</button> <br>
-  <button onclick="print_thing(b);">call print_a_thing with "b"</button> <br>
+  <button onclick="print_thing(a);">call print_thing with "a"</button> <br>
+  <button onclick="print_thing(b);">call print_thing with "b"</button> <br>
   <button onclick="console.log('hi!');">friendly button</button> <br>
   <hr>
   <a href="../index.html">home</a> <br>
