--- a/week-2/index.html
+++ b/week-2/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <h1>week 1 index.html</a>
   <!-- delete this button when you're ready to start! -->
   <a href="./example-to-study/index.html">example to study</a>
 </body>
