--- a/week-3/example-to-study/index.html
+++ b/week-3/example-to-study/index.html
@@ -14,8 +14,8 @@
   <p>
     a little demo to figure out
   </p>
-  <button id="call-with-a">call print_a_thing with "a"</button> <br>
-  <button id="call-with-b">call print_a_thing with "b"</button> <br>
+  <button id="call-with-a">call print_thing with "a"</button> <br>
+  <button id="call-with-b">call print_thing with "b"</button> <br>
   <button id="friendly-one">friendly button</button> <br>
   <hr>
   <a href="../index.html">home</a> <br>
