--- a/week-1/example-to-study.html
+++ b/week-1/example-to-study.html
@@ -12,7 +12,7 @@
     var b = false;
 
     // functions
-    function print_a_thing(param) {
+    function print_thing(param) {
       if (param) {
         console.log('the argument was "a":' , param);
       } else {
@@ -27,8 +27,8 @@
   <p>
     a little demo to figure out
   </p>
-  <button onclick="print_thing(a);">call print_a_thing with "a"</button> <br>
-  <button onclick="print_thing(b);">call print_a_thing with "b"</button> <br>
+  <button onclick="print_thing(a);">call print_thing with "a"</button> <br>
+  <button onclick="print_thing(b);">call print_thing with "b"</button> <br>
   <button onclick="console.log('hi!');">friendly button</button> <br>
   <hr>
   <a href="./index.html">home</a> <br>
