--- a/week-3/example-to-study/index.html
+++ b/week-3/example-to-study/index.html
@@ -15,7 +15,11 @@
     a little demo to figure out
   </p>
   <button id="call-with-a">call print_thing with "a"</button> <br>
-  <button id="call-with-b">call print_thing with "b"</button> <br>
+  <div>
+    <button id="set-b">set b to :</button> 
+    <input id="new-b-input" value="placeholder"></a> <br>
+    <button id="call-with-b">call print_thing with "b"</button> <br>
+  </div>
   <button id="friendly-one">friendly button</button> <br>
   <hr>
   <a href="../index.html">home</a> <br>
