--- a/week-1/index.html
+++ b/week-1/index.html
@@ -8,15 +8,22 @@
 
   <script type="text/javascript">
     // data (variables)
-
+    var object = {name:"Think With Google", link:"https://www.thinkwithgoogle.com/", description:"Practical knowledge on technology, articles on the latest updates in the sector."};
     // functions
-
+    function print_deets (object){
+      console.log(object.name + "\n " + object.link + "\n " + object.description);
+    }
   </script>
 </head>
 
 <body>
-  <h1>week 1 index.html</a>
-  <!-- delete this button when you're ready to start! -->
-  <a href="./example-to-study.html">example to study</a>
+  <h1> INDEX </h1>
+  <p> Hello everyone. Hello world.</p>
+  <br>
+  <a href="./team.html">TEAM</a> 
+  <a href="./calc.html">CALCULATOR</a> 
+  <br>
+  <button onclick="print_deets(object);">DEETS</button> <br>
+
 </body>
 </html>
