--- a/week-2/index.html
+++ b/week-2/index.html
@@ -10,10 +10,16 @@
 
   </script>
 </head>
+<header>
+</header>
 
 <body>
-  <h1>week 1 index.html</a>
+  <h1>INDEX</h1>
+  <p> Wellcome </p>
   <!-- delete this button when you're ready to start! -->
   <a href="./example-to-study/index.html">example to study</a>
 </body>
+
+<footer>
+</footer>
 </html>
