--- a/week-2/index.html
+++ b/week-2/index.html
@@ -1,25 +1,28 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-
-  <title>home page</title>
-
-  <script type="text/javascript" src="./scripts.js"></script>
-
-  </script>
+  <title>HOME</title>
+  
 </head>
+
 <header>
 </header>
 
 <body>
   <h1>INDEX</h1>
-  <p> Wellcome </p>
-  <!-- delete this button when you're ready to start! -->
-  <a href="./example-to-study/index.html">example to study</a>
+  <p> Welcome </p>
+  <button id="print-details">Print Details</button>
+  <hr>
+  <a href="./calc/index.html">CALCULATOR</a>
+  <a href="./team/index.html">TEAM</a>
+
+  <script type="text/javascript" src="./scripts.js"></script>
 </body>
 
 <footer>
 </footer>
+
 </html>
