--- a/week-3/index.html
+++ b/week-3/index.html
@@ -4,16 +4,23 @@
 <head>
   <meta charset="utf-8">
 
-  <title>home page</title>
+  <title>HOME</title>
 
-  <script type="text/javascript" src="./index.js"></script>
+  <script type="text/javascript" src="./data-&-functions.js"></script>
 
   </script>
 </head>
-
+<header>
+  <a href="./calc/index.html">CALCULATOR</a>
+  <a href="./team/index.html">TEAM</a>
+</header>
 <body>
-  <h1>week 1 index.html</a>
-  <!-- delete this button when you're ready to start! -->
-  <a href="./example-to-study/index.html">example to study</a>
+  <h1>INDEX</h1>
+  <p> Welcome </p>
+  <hr>
+  <button id="print-details">Print Details</button>
+  <script type="text/javascript" src="./handlers-&-listeners.js"></script>
 </body>
+<footer>
+</footer>
 </html>
